// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InternalLink component matches the snapshot 1`] = `
<a
  href="/test"
  onClick={[Function]}
/>
`;

exports[`InternalLink component matches the snapshot with existing state 1`] = `
<a
  href="/test-state"
  onClick={[Function]}
/>
`;
